CONFJIRA-229 Cleaned up the POM.