@@ -4,12 +4,11 @@
     <groupId>com.atlassian.confluence.plugins</groupId>
     <artifactId>confluence-jira3-plugin</artifactId>
     <version>4.0.17-SNAPSHOT</version>
-
-    <name>JIRA Macros</name>
     <packaging>atlassian-plugin</packaging>
 
+    <name>JIRA Macros</name>
     <description>Macros to retrieve information from JIRA.</description>
-    <url>https://studio.plugins.atlassian.com/wiki/display/CONFJIRA/Home</url>
+    <url>https://studio.plugins.atlassian.com/wiki/display/CONFJIRA</url>
 
     <scm>
         <connection>scm:svn:https://studio.plugins.atlassian.com/svn/CONFJIRA/trunk</connection>
@@ -20,32 +19,20 @@
     <properties>
         <atlassian.plugin.key>confluence.extra.jira</atlassian.plugin.key>
 
-        <atlassian.pdk.server.url>${atlassian.product.url}</atlassian.pdk.server.url>
-        <atlassian.pdk.server.username>admin</atlassian.pdk.server.username>
-        <atlassian.pdk.server.password>admin</atlassian.pdk.server.password>
+        <jdkLevel>1.6</jdkLevel>
+        <jvmArgs>-Xmx512m -XX:MaxPermSize=256m -d32</jvmArgs>
 
-        <jdkLevel>1.5</jdkLevel>
-
-        <atlassian.product.version>4.2</atlassian.product.version>
+        <atlassian.product.version>4.2.6</atlassian.product.version>
         <atlassian.product.data.version>3.5</atlassian.product.data.version>
-        <atlassian.product.test-lib.version>2.2.1-m1</atlassian.product.test-lib.version>
-
-        <confluence.jars.to.remove.regex.list>${basedir}/src/test/resources/jar-files-to-remove-from-bundle.txt
-        </confluence.jars.to.remove.regex.list>
-        <confluence.plugin.bundled>true</confluence.plugin.bundled>
-        <confluence.plugin.install>true</confluence.plugin.install>
-        <confluence.version>${atlassian.product.version}</confluence.version>
+        <atlassian.product.test-lib.version>2.2.2</atlassian.product.test-lib.version>
 
         <jira.version>4.1.1</jira.version>
-        <jira.data.version>3.13.2</jira.data.version>
-        <jira.test-lib.version>4.1.1</jira.test-lib.version>
-        <jira.http.port>1${http.port}</jira.http.port>
-        <jira.rmi.port>2${rmi.port}</jira.rmi.port>
-        <jira.start>true</jira.start> 
-        <jira.wait>true</jira.wait>
-        <xvfb.enable>false</xvfb.enable>
-        <http.port>1990</http.port>
+        <jira.data.version>4.0</jira.data.version>
+        <jira.test-lib.version>${jira.version}</jira.test-lib.version>
 
+        <http.port>1990</http.port>
+        <jira.http.port>1${http.port}</jira.http.port>
+        <xvfb.enable>false</xvfb.enable>
     </properties>
 
     <dependencies>
@@ -132,35 +119,39 @@
             <plugin>
 			    <artifactId>maven-compiler-plugin</artifactId>
 			    <configuration>
-			        <source>1.5</source>
-			        <target>1.5</target>
+			        <source>${jdkLevel}</source>
+			        <target>${jdkLevel}</target>
 			    </configuration>
 			</plugin>
-                        
             <plugin>
 	            <groupId>com.atlassian.maven.plugins</groupId>
 	            <artifactId>maven-confluence-plugin</artifactId>
 	            <version>3.6.2</version>
 	            <extensions>true</extensions>
 	            <configuration>
+                    <productVersion>${atlassian.product.version}</productVersion>
+                    <productDataVersion>${atlassian.product.data.version}</productDataVersion>
+
 	                <systemPropertyVariables>
                         <baseurl>http://localhost:${http.port}/confluence</baseurl>
                         <xvfb.enable>${xvfb.enable}</xvfb.enable>
                         <http.port>${http.port}</http.port>
                         <user.timezone>GMT</user.timezone>
                     </systemPropertyVariables>
+
 	                <products>
                         <product>
                             <id>confluence</id>
                             <instanceId>conf1</instanceId>
+                            <jvmArgs>${jvmArgs}</jvmArgs>
                             <httpPort>${http.port}</httpPort>
-                            <version>4.1.1</version>
-                            <productDataVersion>${atlassian.product.data.version}</productDataVersion>
+                            <version>${atlassian.product.version}</version>
+                            <dataVersion>${atlassian.product.data.version}</dataVersion>
                         </product>
                         <product>
                             <id>jira</id>
                             <instanceId>jira1</instanceId>
-                            <httpPort>11990</httpPort>
+                            <httpPort>${jira.http.port}</httpPort>
                             <version>${jira.version}</version>                            
                             <dataPath>${basedir}/src/test/resources/generated-test-resources.zip</dataPath>
                         </product>
@@ -183,49 +174,9 @@
                     </testGroups>
                 </configuration>
 	        </plugin>
-            
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>
-                                            com.atlassian.maven.plugins
-                                        </groupId>
-                                        <artifactId>
-                                            maven-confluence-plugin
-                                        </artifactId>
-                                        <versionRange>[3.2.1,)</versionRange>
-                                        <goals>
-                                            <goal>compress-resources</goal>
-                                            <goal>
-                                                copy-bundled-dependencies
-                                            </goal>
-                                            <goal>
-                                                filter-plugin-descriptor
-                                            </goal>
-                                            <goal>generate-manifest</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
+
 	<distributionManagement>
         <repository>
             <id>atlassian-contrib</id>
